# api-banking-design

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/api/v1/: api.py  dependencies.py
src/api/v1/routers/: account.py  customer.py
src/core/: settings.py
src/db/: database.py
src/enums/: account_status.py  currency_code.py  transaction_status.py  transaction_type.py
src/errors/: exceptions.py
src/logger/: __init__.py
src/models/: banking_models.py
src/repositories/: account_repository.py  base.py  customer_repository.py
src/schemas/: base_response.py  common.py  create_customer_request.py
src/schemas/account/: account_base.py  account_input.py  account_output.py  account_update.py
src/schemas/customer/: customer_base.py  customer_input.py  customer_output.py  customer_update.py
src/services/: account_service.py  customer_service.py
src/utils/: .flake8  constants.py  regex_patterns.py  retrieve_enum_values.py  time_functions.py
tests/integration/test_api/test_routes/v1/: conftest.py  test_account.py  test_customer.py
tests/shared/: constants.py
tests/unit/test_api/test_routes/v1/: conftest.py  test_account.py  (+1 more)
tests/unit/test_db/: test_database.py
tests/unit/test_models/: conftest.py  test_account.py  test_customer.py  test_customer_account.py
tests/unit/test_repositories/: conftest.py  test_account_repository.py  test_customer_repository.py
tests/unit/test_services/: conftest.py  test_account_service.py  test_customer_service.py
tests/unit/test_utils/: test_retrieve_enum_values.py
